# parallel_compiting

./: .gitignore  CMakeLists.txt  matvec.cpp
1/: 1.cpp  CMakeLists.txt
2/: CMakeLists.txt  if_compile.cpp  main.cpp
secondtask/seminar/: first.cpp  if_compile.txt  list_threads.cpp  main.cpp  main2.cpp  test
secondtask/task2/task2_1/: CMakeLists.txt  results.csv  task1.cpp
secondtask/task2/task2_2/: CMakeLists.txt  results.csv  task2.cpp
secondtask/task2/task2_3/: CMakeLists.txt  lab2_var1.cpp  lab2_var2.cpp  schedule.cpp
task2/task2_1/: CMakeLists.txt  results.csv
thirdtask/task3/task3_1/: CMakeLists.txt  task3_1.cpp
